--- a/app.json
+++ b/app.json
@@ -3,5 +3,8 @@
   "description": "Planning Poker",
   "repository": "https://github.com/mugi-uno/plahhhh",
   "logo": "https://raw.githubusercontent.com/mugi-uno/plahhhh/master/public/favicon.ico",
-  "keywords": ["planning poker", "node", "express", "vue", "vuex", "websocket"]
+  "keywords": ["planning poker", "node", "express", "vue", "vuex", "websocket"],
+  "engines": {
+    "node": "8.16.x"
+  }
 }
